@@ -1,5 +1,8 @@
 2016-01-30  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* nptl/Makefile (CFLAGS-close.c): New flag.
+	* sysdeps/unix/sysv/linux/close.c: New file.
+
 	* sysdeps/unix/sysv/linux/alpha/Makefile (sysdep_routines): Add
 	osf_select.
 	* sysdeps/unix/sysv/linux/alpha/select.c: New file.
